--- a/.github/workflows/build-c-cpp.yml
+++ b/.github/workflows/build-c-cpp.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Running doubly-linked-list
         run: make runDoubleLinkedList
       - name: print message
-      - run: echo "Building Doubly-Linked_list Add at First"
+        run: echo "Building Doubly-Linked_list Add at First"
       - name: make doubleAddatHead
-      - run: make doubleAddatHead
+        run: make doubleAddatHead
       - name: run runDoubleAtHead
-      - run: make runDoubleAtHead
+        run: make runDoubleAtHead
