--- a/.github/workflows/build-c-cpp.yml
+++ b/.github/workflows/build-c-cpp.yml
@@ -31,3 +31,5 @@ jobs:
         run: make runDoubleAtHead
       - name: run searchintoDoubleLinkedList
         run: make runsearchInList
+      - name: run StackBuild
+        run: make runstack
