Added hash_table data structure insert
Alognwith updated Makefile and GitHub workflows.

--- a/.github/workflows/build-c-cpp.yml
+++ b/.github/workflows/build-c-cpp.yml
@@ -37,3 +37,5 @@ jobs:
         run: make runLinearSearch
       - name: run BinarySearch [Time-Complexity log2(n)]
         run: make runBinarySearch
+      - name: run HashTable
+        run: make runHashTable
