--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
-project(Data_structure C)
+project(data_structure C)
 
 set(CMAKE_C_STANDARD 11)
-add_executable(Data_structure src/main.c src/math.h src/math.c)
+add_executable(bubble_sort src/bubble_sort.c)
+add_executable(stack src/stack.c)
